Fix: theme/repo name is wp_theme_lyquix

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 # .gitignore - List of files to prevent from tracking in repo
 #
 # @version     2.0.0
-# @package     wp_lyquix_theme
+# @package     wp_theme_lyquix
 # @author      lyquix
 # @copyright   Copyright (C) 2015 - 2018 Lyquix
 # @license     GNU General Public License version 2 or later
-# @link        https://github.com/lyquix/tpl_lyquix
+# @link        https://github.com/lyquix/wp_theme_lyquix
 #
 ###
 
