--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
 	"version": "2.1.0",
 	"description": "Lyquix package configuration file",
 	"main": "index.js",
-	"scripts": {
-	},
+	"scripts": {},
 	"author": "Lyquix",
 	"license": "GNU",
 	"devDependencies": {
+		"autoprefixer": "^9.7.3",
 		"gulp": "~3.9.1",
-		"gulp-shell": "~0.6.5"
+		"gulp-shell": "~0.6.5",
+		"node-wget": "^0.4.3",
+		"postcss-cli": "^6.1.3",
+		"sass": "^1.24.2",
+		"terser": "^4.6.0",
+		"uglifycss": "0.0.29"
 	}
 }
