--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 	"license": "GNU",
 	"devDependencies": {
 		"autoprefixer": "^9.7.3",
-		"gulp": "~3.9.1",
-		"gulp-shell": "~0.6.5",
+		"gulp": "^4.0.2",
+		"gulp-shell": "^0.6.5",
 		"node-wget": "^0.4.3",
 		"postcss-cli": "^6.1.3",
 		"sass": "^1.24.2",
