Add: notes file and rule to block access

--- a/.htaccess
+++ b/.htaccess
@@ -13,3 +13,8 @@
 
 # Disable directory listing
 Options -Indexes
+
+# Block access to project notes file
+<Files "NOTES.md">
+  Require all denied
+</Files>
