--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
 	"dependencies": {
 		"babel-cli": "^6.26.0",
 		"babel-preset-env": "^1.7.0"
-	}
+	},
+	"browserslist": [
+		"last 3 versions",
+		"> 0.5%"
+	]
 }
