--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
 	"license": "GNU",
 	"devDependencies": {
 		"autoprefixer": "^9.7.3",
+		"@typescript-eslint/eslint-plugin": "^6.2.1",
+		"@typescript-eslint/parser": "^6.2.1",
+		"eslint": "^8.50.0",
 		"gulp": "^4.0.2",
 		"gulp-shell": "^0.6.5",
-		"jshint": "^2.11.0",
 		"node-wget": "^0.4.3",
 		"postcss-cli": "^6.1.3",
 		"sass": "^1.24.2",
