--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
 		"postcss-cli": "^6.1.3",
 		"sass": "^1.24.2",
 		"uglifycss": "0.0.29"
+		"stylelint": "^15.8.0",
+		"stylelint-config-standard": "^34.0.0",
+		"stylelint-config-standard-scss": "^10.0.0",
 	},
 	"dependencies": {
 		"babel-cli": "^6.26.0",
