--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,10 @@
 .DS_Store
 Thumbs.db
 Desktop.ini
+*Zone.Identifier
 
 # gitignore for wp_theme_lyquix
-.sass-cache
-/dist/*.css
-/dist/*.js
+/.sass-cache
 node_modules
+/php/browsers/browsers.json
 /php/ip2geo/GeoLite2-City.*
