--- a/package.json
+++ b/package.json
@@ -29,19 +29,21 @@
 	"license": "GNU",
 	"type": "module",
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^25.0.2",
-		"@rollup/plugin-node-resolve": "^15.1.0",
-		"@rollup/plugin-typescript": "^11.1.1",
-		"@types/jquery": "^3.5.16",
-		"@types/node": "^20.3.1",
+		"@rollup/plugin-commonjs": "^25.0.7",
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-typescript": "^11.1.5",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/container-queries": "^0.1.1",
+		"@types/jquery": "^3.5.27",
+		"@types/node": "^20.9.0",
 		"@types/vue": "^2.0.0",
-		"@typescript-eslint/eslint-plugin": "^6.2.1",
-		"@typescript-eslint/parser": "^6.2.1",
+		"@typescript-eslint/eslint-plugin": "^6.10.0",
+		"@typescript-eslint/parser": "^6.10.0",
 		"@vue/cli": "^5.0.8",
-		"@vue/compiler-sfc": "^3.3.4",
-		"autoprefixer": "^10.4.14",
+		"@vue/compiler-sfc": "^3.3.8",
+		"autoprefixer": "^10.4.16",
 		"cssnano": "^6.0.1",
-		"eslint": "^8.50.0",
+		"eslint": "^8.53.0",
 		"gulp": "^4.0.2",
 		"gulp-livereload": "^4.0.2",
 		"gulp-postcss": "^9.0.1",
@@ -50,29 +52,34 @@
 		"gulp-sourcemaps": "^3.0.0",
 		"gulp-terser": "^2.1.0",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.4.24",
+		"onchange": "^7.1.0",
+		"postcss": "^8.4.31",
 		"postcss-cli": "^10.1.0",
-		"rollup": "^3.29.1",
-		"rollup-plugin-css-only": "^4.3.0",
-		"rollup-plugin-typescript2": "^0.34.1",
+		"prettier": "^3.0.3",
+		"prettier-plugin-tailwindcss": "^0.5.7",
+		"rollup": "^4.3.0",
+		"rollup-plugin-css-only": "^4.5.2",
+		"rollup-plugin-typescript2": "^0.36.0",
 		"rollup-plugin-vue": "^6.0.0",
-		"sass": "^1.63.5",
-		"stylelint": "^15.8.0",
+		"sass": "^1.69.5",
+		"stylelint": "^15.11.0",
 		"stylelint-config-standard": "^34.0.0",
-		"stylelint-config-standard-scss": "^10.0.0",
-		"terser": "^5.19.2",
-		"typescript": "^5.1.3",
-		"vue": "^3.3.4"
+		"stylelint-config-standard-scss": "^11.1.0",
+		"tailwind-layouts": "^0.3.0",
+		"tailwindcss": "^3.3.5",
+		"terser": "^5.24.0",
+		"typescript": "^5.2.2",
+		"vue": "^3.3.8"
 	},
 	"scripts": {
-		"watch": "run-p watch:*",
-		"watch:css": "npx sass css/styles.scss:css/styles.css --update --watch",
-		"watch:lyquix": "npx rollup -c rollup.lyquix.js -w",
-		"watch:scripts": "npx rollup -c rollup.scripts.js -w",
-		"watch:vue": "npx rollup -c rollup.vue.js -w",
-		"watch:gulp": "npx gulp",
-		"tw": "run-p tw:*",
-		"tw:scss": "npx sass css/tailwind.input.scss:css/tailwind.input.css --update --watch",
-		"tw:tw": "npx tailwindcss -i ./css/tailwind.input.css -o ./css/tailwind.css --watch"
+		"postinstall": "chmod +x ./postinstall.sh && ./postinstall.sh",
+		"watch": "run-p watch:**",
+		"watch:scss": "sass css/custom/custom.scss:css/custom.css --update --watch",
+		"watch:lyquix": "rollup -c rollup.lyquix.js -w",
+		"watch:scripts": "rollup -c rollup.scripts.js -w",
+		"watch:gulp": "gulp",
+		"watch:prettier": "onchange \"css/**/*.scss\" -- prettier --write --ignore-unknown {{changed}}",
+		"watch:tailwind-frontend": "tailwindcss -i css/custom.css -c css/tailwind/config.js -o css/styles.css --watch",
+		"watch:tailwind-editor": "tailwindcss -i css/tailwind/editor.css -c css/tailwind/editor.config.js -o css/editor.css --watch"
 	}
 }
