--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
 		"* @copyright   Copyright (C) 2015 - 2018 Lyquix",
 		"* @license     GNU General Public License version 2 or later",
 		"* @link        https://github.com/Lyquix/wp_theme_lyquix",
-		"*/",
-		"//    .d8888b. 88888888888 .d88888b.  8888888b.   888",
-		"//   d88P  Y88b    888    d88P   Y88b 888   Y88b  888",
-		"//   Y88b.         888    888     888 888    888  888",
-		"//     Y888b.      888    888     888 888   d88P  888",
-		"//        Y88b.    888    888     888 8888888P    888",
-		"//          888    888    888     888 888         Y8P",
-		"//   Y88b  d88P    888    Y88b. .d88P 888            ",
-		"//     Y8888P      888      Y88888P   888         888",
-		"//",
-		"//  DO NOT MODIFY THIS FILE!"
+		"*",
+		"*    .d8888b. 88888888888 .d88888b.  8888888b.   888",
+		"*   d88P  Y88b    888    d88P   Y88b 888   Y88b  888",
+		"*   Y88b.         888    888     888 888    888  888",
+		"*     Y888b.      888    888     888 888   d88P  888",
+		"*        Y88b.    888    888     888 8888888P    888",
+		"*          888    888    888     888 888         Y8P",
+		"*   Y88b  d88P    888    Y88b. .d88P 888            ",
+		"*     Y8888P      888      Y88888P   888         888",
+		"*",
+		"*  DO NOT MODIFY THIS FILE!",
+		"*/"
 	],
 	"name": "lyquix",
 	"version": "2.3.3",
@@ -77,9 +78,9 @@
 		"watch:scss": "sass css/custom/custom.scss:css/custom.css --update --watch",
 		"watch:lyquix": "rollup -c rollup.lyquix.js -w",
 		"watch:scripts": "rollup -c rollup.scripts.js -w",
-		"watch:gulp": "gulp",
 		"watch:prettier": "onchange \"css/**/*.scss\" -- prettier --write --ignore-unknown {{changed}}",
 		"watch:tailwind-frontend": "tailwindcss -i css/custom.css -c css/tailwind/config.js -o css/styles.css --watch",
-		"watch:tailwind-editor": "tailwindcss -i css/tailwind/editor.css -c css/tailwind/editor.config.js -o css/editor.css --watch"
+		"watch:tailwind-editor": "tailwindcss -i css/tailwind/editor.css -c css/tailwind/editor.config.js -o css/editor.css --watch",
+		"watch:gulp": "gulp"
 	}
 }
