--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
 		"uglifycss": "0.0.29"
 	},
 	"dependencies": {
-		"babel-cli": "^6.26.0",
-		"babel-preset-env": "^1.7.0"
+		"@babel/cli": "^7.23.4",
+		"@babel/core": "^7.23.6",
+		"@babel/preset-env": "^7.23.6"
 	},
 	"browserslist": [
 		"last 3 versions",
