ESlint fix - show proper indentation in switch/case clauses
(cherry picked from commit fe52436cdcf1259ad9f49181dcb170232bb38ade)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,10 @@
 		],
 		"indent": [
 			"error",
-			"tab"
+			"tab",
+			{
+				"SwitchCase": 1
+			}
 		],
 		"object-curly-spacing": [
 			"error",
