--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@vue/cli": "^5.0.8",
 		"@vue/compiler-sfc": "^3.3.8",
 		"autoprefixer": "^10.4.18",
+		"critical": "^7.1.2",
 		"cssnano": "^6.1.0",
 		"eslint": "^8.57.0",
 		"gulp": "^4.0.2",
