--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"license": "GNU",
 	"devDependencies": {
 		"autoprefixer": "^9.7.3",
+		"critical": "^7.1.2",
 		"gulp": "^4.0.2",
 		"gulp-shell": "^0.6.5",
 		"jshint": "^2.11.0",
@@ -31,7 +32,9 @@
 	"dependencies": {
 		"@babel/cli": "^7.23.4",
 		"@babel/core": "^7.23.6",
-		"@babel/preset-env": "^7.23.6"
+        "babel-preset-env": "^1.7.0",
+        "node-fetch": "^3.3.2",
+        "puppeteer": "^22.13.1"
 	},
 	"browserslist": [
 		"last 3 versions",
